--- a/templates/2016/index.html
+++ b/templates/2016/index.html
@@ -18,8 +18,7 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/alertifyjs/1.6.1/css/themes/default.rtl.min.css"/>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/alertifyjs/1.6.1/css/themes/semantic.rtl.min.css"/>
     <link href="{% static '2016/css/concat.min.css' %}" rel="stylesheet">
-
-    <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css" />
+    <link href="{% static '2016/css/blueimp-gallery.min.css' %}" rel="stylesheet">
 </head>
 
 <body style="margin: 0px;">
@@ -1095,7 +1094,7 @@ target="#sponsorsModal">¡Contacta a los organizadores aquí!</a>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3"></script>
     <script type="text/javascript" src="{% static '2016/js/concat.min.js' %}"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/alertifyjs/1.6.1/alertify.min.js"></script>
-    <script type="text/javascript" src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
+    <script type="text/javascript" src="{% static '2016/js/jquery.blueimp-gallery.min.js' %}"></script>
 </body>
 
 </html>
