--- a/templates/2016/index.html
+++ b/templates/2016/index.html
@@ -10,7 +10,6 @@
     <meta name="keywords" content="Android, iOS, Windows Phone, Valparaíso, Conferencia, Hackathon, Charlas, Talleres, Cursos, Móvil">
     <meta name="author" content="Valparaíso Mobile Conf">
     <title>Valparaíso Mobile Conf - 2016</title>
-
     <link href="{% static '2016/img/favicon_32x32.png' %}" rel="shortcut icon" type="image/x-icon">
     <link href="{% static '2016/img/favicon_32x32.png' %}" rel="icon" type="image/x-icon">
     <!-- ALERTIFY -->
@@ -24,7 +23,6 @@
 <body style="margin: 0px;">
 
 <!-- MODAL DE GALERIA -->
-
 <div id="blueimp-gallery" class="blueimp-gallery" data-use-bootstrap-modal="false">
     <!-- The container for the modal slides -->
     <div class="slides"></div>
@@ -174,18 +172,8 @@
         <div id="slides" style="position: relative; overflow: hidden; width: 100%; height: 649px;">
             <div class="slides-control" style="position: relative; height: 100%; width: 280px; left: -280px;">
                 <div class="slides-container" style="display: block; margin: 0px; padding: 0px; list-style: none; position: relative; height: 100%; opacity: 1; transition-property: all; transition-duration: 0s; transition-timing-function: ease;">
-
-                    <!-- SLIDE IMAGES -->
-                    <div style="display: none; left: 280px; position: absolute; overflow: hidden; height: 100%; width: 280px; top: 0px; z-index: 0; opacity: 1; transition-property: all; transition-duration: 0s; transition-timing-function: ease;">
-                        <img src="{% static '2016/img/ms-1.jpg' %}" alt="Cinelli" style="backface-visibility: hidden; position: absolute; left: 0px; top: -125.5px; z-index: -1; max-width: none; height: 900px; width: 280px;">
-                    </div>
-
                     <div style="display: block; left: 280px; position: absolute; overflow: hidden; height: 100%; width: 280px; top: 0px; z-index: 2; opacity: 1; transition-property: all; transition-duration: 0s; transition-timing-function: ease;">
-                        <img src="{% static '2016/img/ms-2.jpg' %}" alt="Cinelli" style="backface-visibility: hidden; position: absolute; left: 0px; top: -126px; z-index: -1; max-width: none; height: 901px; width: 280px;">
-                    </div>
-
-                    <div style="display: none; left: 280px; position: absolute; overflow: hidden; height: 100%; width: 280px; top: 0px; z-index: 0; opacity: 1; transition-property: all; transition-duration: 0s; transition-timing-function: ease;">
-                        <img src="{% static '2016/img/ms-3.jpg' %}" alt="Cinelli" style="backface-visibility: hidden; position: absolute; left: 0px; top: -126px; z-index: -1; max-width: none; height: 901px; width: 280px;">
+                        <img src="{% static '2016/img/ms-1.jpg' %}" alt="Cinelli" style="backface-visibility: hidden; position: absolute; left: 0px; top: -126px; z-index: -1; max-width: none; height: 901px; width: 280px;">
                     </div>
                 </div>
             </div>
@@ -296,13 +284,6 @@
                 </h1>
                             <h3>4-5 de Noviembre de 2016</h3>
                             <ul class="shortcuts">
-<!--
-
-                                <li>
-                                    <a href="#location" class="btn-loc" >Find Us</a>
-                                </li>
--->
-
                                 <li>
                                     <a href="#pricing_table" class="btn-reg" >Registro</a>
                                 </li>
@@ -314,10 +295,10 @@
 
             <section>
                 <div class="row" id="conference">
-                    <div class="col-md-7 middle no-padding cont_rl text-center">
+                    <div class="col-md-6 middle no-padding cont_rl text-center">
                         <img src="{% static '2016/img/speaker.jpg' %}" class="img100" alt="img">
                     </div>
-                    <div class="col-md-5 no-padding">
+                    <div class="col-md-6 no-padding">
                         <div class="registration text-center">
                             <h2 class="double">VMC 2016</h2>
                             <h6 class="simple">4-5 de Noviembre | UTFSM Valparaíso</h6>
@@ -344,9 +325,11 @@
                                     <hr class="divder-sm">
                                 </div>
                                 <div class="col-sm-6">
+                                  <a href="#hackathon">
                                     <i class="fa fa-clock-o"></i>
                                     <p class="simple">20 HORAS DE PROGRAMACIÓN</p>
-                                    <hr class="divder-sm">
+                                  </a>
+                                  <hr class="divder-sm">
                                 </div>
                                 <div class="col-sm-6">
                                     <i class="fa fa-map-marker"></i>
@@ -699,6 +682,72 @@
 
             {% endcomment %}
 
+            <!-- SECCION QUIERO EXPONER -->
+            <section>
+                <div id="spek_action" class="row spek_action parallax text-center">
+                    <div class="overlay">
+                        <div class="col-md-12">
+                            <h3 class="double">¿Quieres exponer?</h3>
+
+<!--
+                            <a class="btn-sq btn-spek" href="#speakers" >¡Contáctanos!</a>
+-->
+                            <button type="button" class="btn btn-sq btn-spek" data-toggle="modal" data-target="#speakersModal">¡Contáctanos!</button>
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- FIN SECCION QUIERO EXPONER -->
+
+
+
+            <section>
+                <div class="row" id="hackathon">
+                    <div class="col-md-6 middle no-padding cont_rl text-center">
+                        <img src="{% static '2016/img/workshop.jpg' %}" class="img100" alt="img">
+                    </div>
+                    <div class="col-md-6 no-padding">
+                        <div class="registration text-center sidebar_content">
+                            <h2 class="double">Talleres</h2>
+                            <p class="simple registration">
+                            Queremos difundir la tecnología y sus novedades,
+                            pero, por sobre todo, queremos que entregar el conocimiento
+                            y las herramientas para que cualquier persona apasionada
+                            pueda crear las mejores aplicaciones y diseñar la forma en
+                            que usemos nuestros dispositivos en el futuro.
+                            ¿Y qué mejor que aprender y practicar? Los talleres son la
+                            mejor oportunidadad para esto.</p>
+                        </div>
+                        <div class="sidebar_content text-center">
+                            <h2 class="double">Hackathon</h2>
+                            <p class="simple">
+                            Porque también somos desarrolladores y nos gustan los desafíos.
+                            Y mejor aún si el desafío va con geniales premios. Participa con
+                            tu equipo de la segunda versión de la Hackathon de Valparaíso
+                            Mobile Conf y aplica todas tus habilidades de programación y
+                            diseño en 20 horas de programación extrema.
+                            </p>
+                        </div>
+                        <div class="sidebar_content text-center">
+                            <div class="row">
+                              <div class="col-sm-6">
+                                <a href="#">
+                                  <i class="fa fa-file-text-o"></i>
+                                  <p class="simple">BASES</p>
+                                </a>
+                              </div>
+
+                              <div class="col-sm-6">
+                                <i class="fa fa-gift"></i>
+                                <p class="simple">4 MOTO G 2015</p>
+                              </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <!-- PRECIOS -->
             <section>
                 <div class="row pricing_table parallax" id="pricing_table">
@@ -884,24 +933,6 @@
                     </div>
                 </div>
             </section>
-
-            <!-- SECCION QUIERO EXPONER -->
-            <section>
-                <div id="spek_action" class="row spek_action parallax text-center">
-                    <div class="overlay">
-                        <div class="col-md-12">
-                            <h3 class="double">¿Quieres exponer?</h3>
-
-<!--
-                            <a class="btn-sq btn-spek" href="#speakers" >¡Contáctanos!</a>
--->
-                            <button type="button" class="btn btn-sq btn-spek" data-toggle="modal" data-target="#speakersModal">¡Contáctanos!</button>
-
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- FIN SECCION QUIERO EXPONER -->
 
 
             <!-- SECCION PATROCINADORES -->
