--- a/templates/2015/blocks/sponsors.html
+++ b/templates/2015/blocks/sponsors.html
@@ -11,6 +11,11 @@
 
         <div class="row">
           <ul class="list-inline">
+            {% for sponsor in sponsors %}
+              <li><a href="{{sponsor.url}}" target="_blank"><img class="org-logo" src="{{sponsor.logo.url}}" alt="{{sponsor.name}}" /></a></li>
+            {% endfor %}
+
+            {% comment %}
             <li><a href="http://www.rree.utfsm.cl" target="_blank"><img class="org-logo" src="{% static '2015/img/patrocinio/rree.png' %}" alt="Logo Relaciones Estudiantiles U T F S M" /></a></li>
             <li><a href="http://paisdigital.org" target="_blank"><img class="org-logo"
 src="{% static '2015/img/patrocinio/paisdigital.png' %}" alt="Logo Fundación País Digital" /></a></li>
@@ -18,6 +23,7 @@ src="{% static '2015/img/patrocinio/paisdigital.png' %}" alt="Logo Fundación Pa
             <li><a href="http://www.valparaisocb.com" target="_blank"><img class="org-logo" src="{% static '2015/img/patrocinio/vcb.jpg' %}" alt="Logo Valparaíso Convention Bureau" /></a></li>
             <li><a href="http://www.acti.cl" target="_blank"><img class="org-logo" src="{% static '2015/img/patrocinio/acti.jpg' %}" alt="Logo Asociación Chilena de Empresas de Tecnologías de Información Asociación Gremial" /></a></li>
             <li><a href="http://www.crcp.cl" target="_blank"><img class="org-logo" src="{% static '2015/img/patrocinio/crcp.jpg' %}" alt="Logo Cámara Regional de Comercio de Valparaíso" /></a></li>
+            {% endcomment %}
           </ul>
           <div class="btn-wrapper">
             <a href="{% url 'become_sponsor' year %}" class="btn btn-sm btn-primary" target="_blank">Auspiciar/patrocinar este evento</a>
