--- a/templates/2016/index.html
+++ b/templates/2016/index.html
@@ -284,6 +284,13 @@
                 </h1>
                             <h3>4-5 de Noviembre de 2016</h3>
                             <ul class="shortcuts">
+<!--
+
+                                <li>
+                                    <a href="#location" class="btn-loc" >Find Us</a>
+                                </li>
+-->
+
                                 <li>
                                     <a href="#pricing_table" class="btn-reg" >Registro</a>
                                 </li>
@@ -295,10 +302,10 @@
 
             <section>
                 <div class="row" id="conference">
-                    <div class="col-md-6 middle no-padding cont_rl text-center">
+                    <div class="col-md-7 middle no-padding cont_rl text-center">
                         <img src="{% static '2016/img/speaker.jpg' %}" class="img100" alt="img">
                     </div>
-                    <div class="col-md-6 no-padding">
+                    <div class="col-md-5 no-padding">
                         <div class="registration text-center">
                             <h2 class="double">VMC 2016</h2>
                             <h6 class="simple">4-5 de Noviembre | UTFSM Valparaíso</h6>
@@ -325,11 +332,9 @@
                                     <hr class="divder-sm">
                                 </div>
                                 <div class="col-sm-6">
-                                  <a href="#hackathon">
                                     <i class="fa fa-clock-o"></i>
                                     <p class="simple">20 HORAS DE PROGRAMACIÓN</p>
-                                  </a>
-                                  <hr class="divder-sm">
+                                    <hr class="divder-sm">
                                 </div>
                                 <div class="col-sm-6">
                                     <i class="fa fa-map-marker"></i>
@@ -682,72 +687,6 @@
 
             {% endcomment %}
 
-            <!-- SECCION QUIERO EXPONER -->
-            <section>
-                <div id="spek_action" class="row spek_action parallax text-center">
-                    <div class="overlay">
-                        <div class="col-md-12">
-                            <h3 class="double">¿Quieres exponer?</h3>
-
-<!--
-                            <a class="btn-sq btn-spek" href="#speakers" >¡Contáctanos!</a>
--->
-                            <button type="button" class="btn btn-sq btn-spek" data-toggle="modal" data-target="#speakersModal">¡Contáctanos!</button>
-
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- FIN SECCION QUIERO EXPONER -->
-
-
-
-            <section>
-                <div class="row" id="hackathon">
-                    <div class="col-md-6 middle no-padding cont_rl text-center">
-                        <img src="{% static '2016/img/workshop.jpg' %}" class="img100" alt="img">
-                    </div>
-                    <div class="col-md-6 no-padding">
-                        <div class="registration text-center sidebar_content">
-                            <h2 class="double">Talleres</h2>
-                            <p class="simple registration">
-                            Queremos difundir la tecnología y sus novedades,
-                            pero, por sobre todo, queremos que entregar el conocimiento
-                            y las herramientas para que cualquier persona apasionada
-                            pueda crear las mejores aplicaciones y diseñar la forma en
-                            que usemos nuestros dispositivos en el futuro.
-                            ¿Y qué mejor que aprender y practicar? Los talleres son la
-                            mejor oportunidadad para esto.</p>
-                        </div>
-                        <div class="sidebar_content text-center">
-                            <h2 class="double">Hackathon</h2>
-                            <p class="simple">
-                            Porque también somos desarrolladores y nos gustan los desafíos.
-                            Y mejor aún si el desafío va con geniales premios. Participa con
-                            tu equipo de la segunda versión de la Hackathon de Valparaíso
-                            Mobile Conf y aplica todas tus habilidades de programación y
-                            diseño en 20 horas de programación extrema.
-                            </p>
-                        </div>
-                        <div class="sidebar_content text-center">
-                            <div class="row">
-                              <div class="col-sm-6">
-                                <a href="#">
-                                  <i class="fa fa-file-text-o"></i>
-                                  <p class="simple">BASES</p>
-                                </a>
-                              </div>
-
-                              <div class="col-sm-6">
-                                <i class="fa fa-gift"></i>
-                                <p class="simple">4 MOTO G 2015</p>
-                              </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
             <!-- PRECIOS -->
             <section>
                 <div class="row pricing_table parallax" id="pricing_table">
@@ -933,6 +872,24 @@
                     </div>
                 </div>
             </section>
+
+            <!-- SECCION QUIERO EXPONER -->
+            <section>
+                <div id="spek_action" class="row spek_action parallax text-center">
+                    <div class="overlay">
+                        <div class="col-md-12">
+                            <h3 class="double">¿Quieres exponer?</h3>
+
+<!--
+                            <a class="btn-sq btn-spek" href="#speakers" >¡Contáctanos!</a>
+-->
+                            <button type="button" class="btn btn-sq btn-spek" data-toggle="modal" data-target="#speakersModal">¡Contáctanos!</button>
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- FIN SECCION QUIERO EXPONER -->
 
 
             <!-- SECCION PATROCINADORES -->
