Micro fix con GMaps

--- a/templates/2015/index.html
+++ b/templates/2015/index.html
@@ -360,7 +360,7 @@
   </footer>
 
   <div class="back-to-top"><i class="fa fa-angle-up fa-3x"></i></div>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3"></script>
   <script type="text/javascript" src="{% static '2015/js/jquery-2.1.0.min.js' %}"></script>
   <script type="text/javascript" src="{% static '2015/js/jquery.nav.js' %}"></script>
   <script type="text/javascript" src="{% static '2015/js/jquery.appear.js' %}"></script>
