--- a/templates/2016/index.html
+++ b/templates/2016/index.html
@@ -1,196 +1,62 @@
+{% extends '2016/base.html'%}
+
 {% load static from staticfiles %}
 {% load i18n %}
 
-<!DOCTYPE html>
-<html lang="en" class="js">
 
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Conferencia sobre tecnologías móviles">
-    <meta name="keywords" content="Android, iOS, Windows Phone, Valparaíso, Conferencia, Hackathon, Charlas, Talleres, Cursos, Móvil">
-    <meta name="author" content="Valparaíso Mobile Conf">
-    <title>Valparaíso Mobile Conf - 2016</title>
-    <link href="{% static '2016/img/favicon_32x32.png' %}" rel="shortcut icon" type="image/x-icon">
-    <link href="{% static '2016/img/favicon_32x32.png' %}" rel="icon" type="image/x-icon">
-    <!-- ALERTIFY -->
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/alertifyjs/1.6.1/css/alertify.rtl.min.css"/>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/alertifyjs/1.6.1/css/themes/default.rtl.min.css"/>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/alertifyjs/1.6.1/css/themes/semantic.rtl.min.css"/>
-    <link href="{% static '2016/css/concat.min.css' %}" rel="stylesheet">
-    <link href="{% static '2016/css/blueimp-gallery.min.css' %}" rel="stylesheet">
-</head>
+{% block modals %}
+{% include '2016/blocks/gallery_modal.html' %}
+{% include '2016/blocks/contact_modals.html' %}
+{% endblock %}
 
-<body style="margin: 0px;">
+{% block right_content %}
+<div class="container-fluid no-padding">
 
-  {% include '2016/blocks/modals.html' %}
+<!-- SECCION CHARLAS -->
+{% include '2016/blocks/main.html' %}
 
+<!-- SECCION CHARLAS -->
+{% include '2016/blocks/talks.html' %}
 
-    <div class="left_bar text-center">
-        <div id="slides" style="position: relative; overflow: hidden; width: 100%; height: 649px;">
-            <div class="slides-control" style="position: relative; height: 100%; width: 280px; left: -280px;">
-                <div class="slides-container" style="display: block; margin: 0px; padding: 0px; list-style: none; position: relative; height: 100%; opacity: 1; transition-property: all; transition-duration: 0s; transition-timing-function: ease;">
-                    <div style="display: block; left: 280px; position: absolute; overflow: hidden; height: 100%; width: 280px; top: 0px; z-index: 2; opacity: 1; transition-property: all; transition-duration: 0s; transition-timing-function: ease;">
-                        <img src="{% static '2016/img/ms-1.jpg' %}" alt="Cinelli" style="backface-visibility: hidden; position: absolute; left: 0px; top: -126px; z-index: -1; max-width: none; height: 901px; width: 280px;">
-                    </div>
-                </div>
-            </div>
-        </div>
+<!-- LISTA DE EXPOSITORES -->
+{% if speaker_list %}
+  {% include '2016/blocks/speakers.html' with speaker_list=speaker_list %}
+{% endif %}
 
-        <header>
-            <nav>
-                <div class="navigation_me">
-                    <div class="logo clearfix">
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                                <span class="sr-only">Toggle navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                            <h1>
-                              <a class="navbar-brand" href="#home" >
-                                <img id="lateral-logo" src="{% static '2016/img/logo_vmc.png' %}" alt="LOGO VMC">
-                              </a>
-                            </h1>
-                        </div>
-                    </div>
+<!-- SECCION QUIERO EXPONER -->
+{% include '2016/blocks/speaker_apply.html' %}
 
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
-                        <ul class="main_navigation">
-                            <li>
-                                <a href="#conference" >
-                                    <p>La conferencia</p>
-                                </a>
-                            </li>
-                            {% if speaker_list %}
-                            <li>
-                                <a href="#speaker" >
-                                    <p>Expositores</p>
-                                </a>
-                            </li>
-                            {% endif %}
+<!-- PROGRAMA -->
+{% include '2016/blocks/workshops.html' %}
 
-                            <li>
-                                <a href="#hackathon" >
-                                    <p>Talleres y Hackathon</p>
-                                </a>
-                            </li>
+<!-- PRECIOS -->
+{% include '2016/blocks/purchase.html' %}
 
-                            {% if speaker_list %}
-                            <li>
-                                <a href="#schedule" >
-                                    <p>Programa</p>
-                                </a>
-                            </li>
-                            {% endif %}
+<!-- PROGRAMA -->
+{% include '2016/blocks/schedule.html' %}
 
-                            {% comment %}
-                            <li>
-                                <a href="#pricing_table" >
-                                    <p>Registro</p>
-                                </a>
-                            </li>
-                            {% endcomment %}
+<!-- PRECIOS -->
+{% include '2016/blocks/photos_2015.html' %}
 
 
-                            <li>
-                                <a href="#gallery" >
-                                    <p>Galería 2015</p>
-                                </a>
-                            </li>
+<!-- PATROCINADORES -->
+{% include '2016/blocks/sponsors.html' with sponsors=sponsors %}
 
-                            <li>
-                                <a href="#sponsors" >
-                                    <p>Patrocinadores</p>
-                                </a>
-                            </li>
+<!-- INVITACIÓN SPONSORS -->
+{% include '2016/blocks/sponsor_apply.html' %}
 
-                            <li>
-                                <a href="#location" >
-                                    <p>Ubicación</p>
-                                </a>
-                            </li>
+<!-- UBICACION -->
+{% include '2016/blocks/location.html' %}
 
-                            <li>
-                                <a href="#location" >
-                                    <p>Contacto</p>
-                                </a>
-                            </li>
+<!-- DATOS CONTACTO -->
+{% include '2016/blocks/contact_data.html' %}
 
-                            <li>
-                                <a href="/2015" >
-                                    <p>Versión 2015</p>
-                                </a>
-                            </li>
-
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
-    </div>
-
-    <div class="right_content">
-
-
-        <div class="container-fluid no-padding">
-
-            <!-- SECCION CHARLAS -->
-            {% include '2016/blocks/main.html' %}
-
-            <!-- SECCION CHARLAS -->
-            {% include '2016/blocks/talks.html' %}
-
-            <!-- LISTA DE EXPOSITORES -->
-            {% if speaker_list %}
-              {% include '2016/blocks/speakers.html' with speaker_list=speaker_list %}
-            {% endif %}
-
-            <!-- SECCION QUIERO EXPONER -->
-            {% include '2016/blocks/speaker_apply.html' %}
-
-            <!-- PROGRAMA -->
-            {% include '2016/blocks/workshops.html' %}
-
-            <!-- PRECIOS -->
-            {% include '2016/blocks/purchase.html' %}
-
-            <!-- PROGRAMA -->
-            {% include '2016/blocks/schedule.html' %}
-
-            <!-- PRECIOS -->
-            {% include '2016/blocks/photos_2015.html' %}
-
-
-            <!-- PATROCINADORES -->
-            {% include '2016/blocks/sponsors.html' with sponsors=sponsors %}
-
-            <!-- INVITACIÓN SPONSORS -->
-            {% include '2016/blocks/sponsor_apply.html' %}
-
-            <!-- UBICACION -->
-            {% include '2016/blocks/location.html' %}
-
-            <!-- DATOS CONTACTO -->
-            {% include '2016/blocks/contact_data.html' %}
-
-            <footer>
-                <div class="row copyright text-center">
-                    <div class="col-md-12">
-                        <p class="simple">VMC 2016| UTFSM </p>
-                    </div>
-                </div>
-            </footer>
+<footer>
+    <div class="row copyright text-center">
+        <div class="col-md-12">
+            <p class="simple">VMC 2016| UTFSM </p>
         </div>
     </div>
-
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3"></script>
-    <script type="text/javascript" src="{% static '2016/js/concat.min.js' %}"></script>
-    <script type="text/javascript" src="{% static '2016/js/jquery.blueimp-gallery.min.js' %}"></script>    
-    <script type="text/javascript" src="//cdn.jsdelivr.net/alertifyjs/1.6.1/alertify.min.js"></script>
-
-
-</body>
-
-</html>
+</footer>
+</div>
+{% endblock %}
