Agrega link a bases hackathon

--- a/templates/2016/blocks/workshops.html
+++ b/templates/2016/blocks/workshops.html
@@ -31,15 +31,15 @@
             <div class="sidebar_content text-center">
                 <div class="row">
                   <div class="col-sm-6">
-                    <a href="#">
+                    <a target="_blank" href="{% static '2016/docs/VMC_2016_BasesHackathon.pdf' %}">
                       <i class="fa fa-file-text-o"></i>
-                      <p class="simple">BASES (¡PRONTO!)</p>
+                      <p class="simple">BASES 2016</p>
                     </a>
                   </div>
 
                   <div class="col-sm-6">
                     <i class="fa fa-gift"></i>
-                    <p class="simple">¡PRONTO!</p>
+                    <p class="simple">Moto G 2015 para cada integrante</p>
                   </div>
                 </div>
             </div>
