Agrega venta de entradas por welcu

--- a/templates/2016/blocks/purchase.html
+++ b/templates/2016/blocks/purchase.html
@@ -25,12 +25,6 @@
                                 <li>Comida gratis</li>
                                 <li>Merchandising del evento</li>
                             </ul>
-
-
-                            <div class="pt-footer">
-                                <p><a href="#">¡Pronto!</a></p>
-                            </div>
-
                         </div>
 
                         <div class="col-md-4 block personal fl">
@@ -39,7 +33,7 @@
                             <div class="content" style="display: block;">
                                 <p class="price">
                                   <sup>$</sup>
-                                  <span>6.000</span>
+                                  <span>5.000</span>
                                 </p>
                                 <p class="hint">Para todo público</p>
                             </div>
@@ -51,11 +45,6 @@
                                 <li>Coffee breaks</li>
                                 <li>Merchandising del evento</li>
                             </ul>
-
-                            <div class="pt-footer">
-                                <p><a href="#">¡Pronto!</a></p>
-                            </div>
-
                         </div>
 
 
@@ -79,14 +68,22 @@
                                 <li>Comida durante la hackathon</li>
                                 <li>Merchandising del evento</li>
                             </ul>
-
-
-                            <div class="pt-footer">
-                                <p><a href="#">¡Pronto!</a></p>
-                            </div>
-
                         </div>
 
+                    </div>
+                </div>
+                <div class="panel">
+                    <div class="panel-body">
+                    <div id="welcu_embed_sale_1151611744" class="welcu_embed">
+                    <center><img src="https://assets.welcu.com/images/loading.gif" width="50" height="50"></center>
+                    </div>
+                    <script type="text/javascript" charset="utf-8">
+                    (function() {
+                    var embed = document.createElement('script'); embed.type = 'text/javascript'; embed.async = true;
+                    embed.src = "https://welcu.com/vmc2016/vmc2016/sales/2b8b14b3.embed?locale=es";
+                    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(embed, s);
+                    })();
+                    </script>
                     </div>
                 </div>
             </div>
