Agrega modal de aviso de cancelación de evento

--- a/templates/2016/blocks/purchase.html
+++ b/templates/2016/blocks/purchase.html
@@ -72,6 +72,7 @@
 
                     </div>
                 </div>
+                {% comment %}
                 <div class="panel">
                     <div class="panel-body">
                     <div id="welcu_embed_sale_1151611744" class="welcu_embed">
@@ -86,6 +87,7 @@
                     </script>
                     </div>
                 </div>
+                {% endcomment %}
             </div>
         </div>
     </div>
