--- a/templates/2016/blocks/talks.html
+++ b/templates/2016/blocks/talks.html
@@ -9,7 +9,7 @@
         <div class="col-md-5 no-padding">
             <div class="registration text-center">
                 <h2 class="double">VMC 2016</h2>
-                <h6 class="simple">4-5 de Noviembre | UTFSM Valparaíso</h6>
+                <!-- <h6 class="simple">4-5 de Noviembre | UTFSM Valparaíso</h6> -->
                 {% comment %}
                 <a href="#pricing_table" class="btn-reg' %}" >Regístrate ahora!</a>
                 {% endcomment %}
@@ -20,8 +20,8 @@
                 compartieron su conocimiento y experiencia alrededor de las
                 tecnologías móviles en 11 charlas, 2 talleres y una espectacular
                 hackathon.
-                Este año, repetiremos eso y más: no solo smartphones y smartwatches:
-                habrá distintos vestibles, Raspberry Pi, y muchas más sorpresas!
+                <!-- Este año, repetiremos eso y más: no solo smartphones y smartwatches:
+                habrá distintos vestibles, Raspberry Pi, y muchas más sorpresas! -->
                 </p>
                 <hr class="divder">
             </div>
