--- a/templates/2016/blocks/workshops.html
+++ b/templates/2016/blocks/workshops.html
@@ -33,7 +33,7 @@
                   <div class="col-sm-6">
                     <a target="_blank" href="{% static '2016/docs/VMC_2016_BasesHackathon.pdf' %}">
                       <i class="fa fa-file-text-o"></i>
-                      <p class="simple">BASES 2016</p>
+                      <!-- <p class="simple">BASES 2016</p> -->
                     </a>
                   </div>
 
