--- a/templates/2016/index.html
+++ b/templates/2016/index.html
@@ -12,6 +12,9 @@
 {% block right_content %}
 <div class="container-fluid no-padding">
 
+<!-- MODAL EVENTO CANCELADO-->
+{% include '2016/blocks/cancellation.html' %}
+
 <!-- SECCION CHARLAS -->
 {% include '2016/blocks/main.html' %}
 
